examples/bad/bad_function_argument.soy
func f(ref x = 10) { # ERROR: argument passed by reference cannot be 
    return x;
}